# ohao-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: basic_retarget.py  batch_retarget.py  custom_blender_path.py  inspect_in_blender.py  retarget_with_preset.py
src/ohao/: __init__.py  _cli.py  _credentials.py  _exceptions.py
src/ohao/mogen3d/: __init__.py  _blender_script.py  client.py  retarget.py
src/ohao/mogen3d/presets/: mixamo.json  ue5_mannequin.json
tests/: test_cli.py  test_client.py  test_credentials.py  test_retarget.py
