[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohao"
version = "0.1.0"
description = "CLI & SDK for game developers — motion capture, retargeting, and more"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "OhaoTech" }]
keywords = ["motion-capture", "mocap", "bvh", "fbx", "retarget", "blender", "game-dev", "animation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "httpx>=0.24.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx", "ruff"]

[project.scripts]
ohao = "ohao._cli:main"

[project.urls]
Homepage = "https://mogen3d.ohao.tech"
Documentation = "https://github.com/OhaoTech/ohao-sdk#readme"
Repository = "https://github.com/OhaoTech/ohao-sdk"
Issues = "https://github.com/OhaoTech/ohao-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ohao.mogen3d.presets" = ["*.json"]
"ohao.mogen3d" = ["_blender_script.py"]
